# p2p-llm-forge

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/p2p_llm_forge/: __init__.py  __main__.py  config.py  data.py  distributed.py  trainer.py
